IJPL-238 remove the unnecessary usage of commons-lang library
GitOrigin-RevId: c513ea78426bccd540dc1d8144466fd61e8727f3